[package]
name = "steward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3.4"
bytes = "1.1.0"
chrono = "0.4.19"
http = "0.2.5"
http-body = "0.4.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.71"
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread"] }
