[package]
name = "steward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abscissa_tokio = "0.5.1"
axum = "0.3.4"
bytes = "1.1.0"
chrono = "0.4.19"
gumdrop = "0.7"
http = "0.2.5"
http-body = "0.4.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.71"
thiserror = "1"
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.abscissa_core]
version = "0.5.2"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.5.2", features = ["testing"] }
once_cell = "1.2"
