[package]
name = "steward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abscissa_tokio = "=0.6.0-beta.1"
axum = "0.3.4"
bytes = "1.1.0"
chrono = "0.4.19"
clap = "3.0.0-beta.5"
http = "0.2.5"
http-body = "0.4.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.71"
thiserror = "1"
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.abscissa_core]
version = "0.6.0-beta.1"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0-beta.1", features = ["testing"] }
once_cell = "1.2"
